fix(material/slide-toggle): NVDA reading out clickable before label
Similar fix to #22446 for the slide toggle. Moves around the DOM in order to avoid the behavior where NVDA will read out "clickable" before the label, if the `input` parent has a `click` or `mousedown` listener. Includes the following changes:
1. Moving the `input` out of the ripple target for the current slide toggle. The input is invisible so it doesn't really matter where we put it.
2. Using the `input` as the ripple target in the MDC slide toggle. The `input` covers the entire container so the result is the same.

--- a/src/material/slide-toggle/slide-toggle.scss
+++ b/src/material/slide-toggle/slide-toggle.scss
@@ -23,6 +23,7 @@ $bar-track-width: $bar-width - $thumb-size;
   line-height: $height;
   white-space: nowrap;
   outline: none;
+  position: relative;
 
   -webkit-tap-highlight-color: transparent;
 
